2008-01-07 Raphael Ackermann <raphael.ackermann@gmail.com
	* src/plugins/CmdRef.py: clean up unused and broken imports and vars
	0001494: unresolved import WebPage in CmdRef.py

2008-01-07  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/docgen/ODFDoc.py: remove duplicate import
	* src/docgen/LaTeXDoc.py :added support for opening latex editor
	0001536: not possible to select latex editor like kile to open a latex file
	automatically 

2008-01-06  Brian Matherly <brian@gramps-project.org>
	* src/Filters/_SearchFilter.py:
	0001521: Filters work when tested, but not in side bar

2008-01-06  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/DefaultGramplets.py: added gettext (thanks, Jim!)

2008-01-06  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/MyGrampsView.py:
	* src/DataViews/__init__.py:
	* src/DataViews/GrampletView.py:
	* src/DataViews/Makefile.am:
	* src/Config/_GrampsConfigKeys.py:
	* src/plugins/DefaultGramplets.py:
	* src/plugins/Makefile.am:
	* src/plugins/DefaultGadgets.py:
	* src/glade/gramps.glade:
	* po/POTFILES.in:
	Renamed Gadgets -> Gramplets, MyGrampsView -> GrampletView

2008-01-06  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/DisplayState.py: 0001495: imports in DisplayState.py need fixed.

2008-01-06  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_ReportUtils.py:
	0001543: Preferences name format not used - Timeline Graph

2008-01-06  Brian Matherly <brian@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py:
	* src/DataViews/__init__.py:
	* src/DataViews/GoogleView.py:
	Don't enable GoogleView and pass on gtkmozembed failure for systems that
	don't have Gnome.

2008-01-06 Jerome Rapinat <romjerome@yahoo.fr>
        * src/docgen/Makefile.am: gtkprintpreview.glade was not pasted on install 

2008-01-06  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/MyGrampsView.py (MyGrampsView.clear_gadgets): 
	Protect on re-columning from gadgets that have been removed
